<resources>
    <string name="app_name">CoifSalonBusiness</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Dont_have_an_account_yet_Sign_up_here">Don\'t have an account yet? <u>Sign up here</u></string>
    <string name="SignIn">SignIn</string>
    <string name="Hint_Service_Name_SignUp_Frag5">Service name</string>
    <string name="Hint_Service_Duration_SignUp_Frag5">Service duration</string>
    <string name="Hint_Service_Price_SignUp_Frag5">Service price in DZ</string>
    <string name="Add">Add</string>
    <string name="Finish">Finish</string>
    <string name="Instructions_Frag5">Fill the fields for each service you provide and hit add, when you are done adding all your services hit Finish </string>
    <string name="Could_not_get_pending_list">Could not get pending list</string>
    <string name="Could_not_add_the_person_to_the_waiting_list">Could not add the person to the waiting list</string>
    <string name="Could_not_delete_person_from_pending">Could not delete person from pending</string>
    <string name="Failed_to_update_location_info">Failed to update location info</string>
    <string name="Unexpected_error_occurred">Unexpected error occurred</string>
    <string name="Failed_to_upload_image">Failed to upload image </string>
    <string name="Failed_to_load_image_from_phone_gallery">Failed to load image from phone gallery </string>
    <string name="Failed_to_get_image_from_server">Failed to get image from server </string>
</resources>
