<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/MainConstraintLayout_Frag5"
        >
        <EditText
            android:id="@+id/serviceName_Frag5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="43dp"
            android:layout_marginTop="251dp"
            android:ems="10"
            android:hint="@string/Hint_Service_Name_SignUp_Frag5"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/serviceDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:ems="10"
            android:hint="@string/Hint_Service_Duration_SignUp_Frag5"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="@+id/serviceName_Frag5"
            app:layout_constraintTop_toBottomOf="@+id/serviceName_Frag5" />

        <EditText
            android:id="@+id/servicePrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:ems="10"
            android:hint="@string/Hint_Service_Price_SignUp_Frag5"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="@+id/serviceDuration"
            app:layout_constraintTop_toBottomOf="@+id/serviceDuration" />

        <Button
            android:id="@+id/addButton_Frag5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="46dp"
            android:layout_marginBottom="181dp"
            android:background="@drawable/button_type_02"
            android:text="@string/Add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/finishButton_Frag5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="61dp"
            android:background="@drawable/button_type_04"
            android:text="@string/Finish"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="49dp"
            android:text="@string/Instructions_Frag5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>